--- a/src/components/movies/moviesList.scss
+++ b/src/components/movies/moviesList.scss
@@ -4,7 +4,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0 20px;
+  padding: 20px;
+  height: max-content;
 }
 
 .movies-container{
@@ -12,5 +13,4 @@
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   gap: 20px;
   width: 100%;
-  min-height: 100vh;
 }
