--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,7 @@
 $blackText: #333;
 $black: #1a1a1b;
 $white: #fff;
+$whiteTransparent: #ffffff11;
 $lightGrey: #ccc;
 $accentColor: #4064c7;
 
@@ -11,18 +12,22 @@ $accentColor: #4064c7;
   margin: 0;
   box-sizing: border-box;
   text-decoration: none;
-  color: #333;
   font-family: 'Roboto Condensed', sans-serif;
-  user-select: none;
 }
 
-.navigation-link:hover {
-  text-decoration: underline;
-}
 .App {
   display: flex;
   flex-direction: column;
   width: 100%;
   min-height: 100vh;
   background-color: $black;
+  color: $white;
 }
+.navigation-link{
+  user-select: none;
+  color: $lightGrey;
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
