--- a/src/components/errors/error.scss
+++ b/src/components/errors/error.scss
@@ -27,9 +27,15 @@
   justify-content: center;
   align-items: center;
   text-align: center;
+  flex-wrap: wrap;
   width: 100%;
   min-height: 200px;
-  background-color: darken($white, 5);
-  color: darken($white, 35);
+  background-color: darken($white, 55);
+  color: darken($white, 15);
   border-radius: 8px;
+  & span{
+    padding: 10px;
+    width: 100px;
+    text-align: center;
+  }
 }
