--- a/src/components/search/searchMovies.scss
+++ b/src/components/search/searchMovies.scss
@@ -3,6 +3,7 @@
   .search-movies-container{
     display: flex;
     gap: 10px;
+    position: relative;
   }
   
   .search-input,
@@ -13,7 +14,7 @@
     border-radius: 300px;
   }
   .search-input{
-    width: 300px;
+    width: 400px;
     font-size: 1.4rem;
     outline: 1px solid $blackText;
     border-radius: 300px;
@@ -29,9 +30,15 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
+    background-color: $white;
+    position: absolute;
+    right: 5px;
+    top: 50%;
+    transform: translateY(-50%);
+    transition: background-color .2s;
     &:hover {
-      background: $accentColor;
+      background-color: $accentColor;
     } 
   }
