--- a/src/components/movies/MovieDetails.scss
+++ b/src/components/movies/MovieDetails.scss
@@ -4,6 +4,7 @@ $maxSize: 400px;
 .light-grey-text{
   color: $lightGrey;
 }
+
 .movies-details-container{
   display: flex;
   flex-wrap: wrap;
@@ -13,31 +14,34 @@ $maxSize: 400px;
 }
 
 .movies-details-wrapper{
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, max-content));
   flex-wrap: wrap;
   background-color: $whiteTransparent;
   padding: 20px;
   border-radius: 8px;
   gap: 40px;
   position: relative;
-
+  max-width: max-content;
 }
+
 .movie-poster-large{
   display: grid;
   justify-content: center;
-  grid-template-columns: minmax(150px, $maxSize)
+  max-width: $maxSize;
 }
+
 .movie-details{
-  display: flex;
-  flex-direction: column;
+  display: grid;
   gap: 10px;
   min-width: 50px;
-  max-width: 400px;
 }
+
 .movie-header,
 .movie-details{
   color: $white;
 }
+
 .stars{
   display: flex;
   align-items: center;
@@ -45,10 +49,17 @@ $maxSize: 400px;
   padding: 10px 0;
   gap: 10px;
 }
+
 .movie-details{
   font-size: 1.2rem;
 }
+
 .movie-premier,
 .movie-status{
   font-size: 1rem;
+}
+
+.movie-details-go-back-button{
+  justify-self: flex-end;
+  align-self: flex-end;
 }
