--- a/src/components/search/searchShow.scss
+++ b/src/components/search/searchShow.scss
@@ -1,6 +1,6 @@
   @import '../../App.scss';
   
-  .search-movies-container{
+  .search-show-container{
     display: flex;
     gap: 10px;
     position: relative;
